--- a/index.html
+++ b/index.html
@@ -3,30 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sweet Shop</title>
+  <title>Sweet Treats</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Welcome to My Sweet Shop</h1>
-    <p>Delicious treats made with love 🍬🍭</p>
+    <h1>Sweet Treats 🍬</h1>
+    <p>Your one-stop shop for delicious delights!</p>
   </header>
 
-  <section class="products">
-    <div class="product">
-      <img src="https://via.placeholder.com/150" alt="Sweet 1">
-      <h3>Gulab Jamun</h3>
-      <p>₹100 / 500g</p>
-    </div>
-    <div class="product">
-      <img src="https://via.placeholder.com/150" alt="Sweet 2">
-      <h3>Rasgulla</h3>
-      <p>₹120 / 500g</p>
-    </div>
+  <section class="button-grid">
+    <button class="sweet-btn">Rasgulla</button>
+    <button class="sweet-btn">Ladoo</button>
+    <button class="sweet-btn">Gulab Jamun</button>
+    <button class="sweet-btn">Barfi</button>
+    <button class="sweet-btn">Kaju Katli</button>
+    <button class="sweet-btn">Jalebi</button>
   </section>
 
   <footer>
-    <p>Contact us: sweets@example.com</p>
+    <p>© 2025 Sweet Treats. All rights reserved.</p>
   </footer>
 </body>
 </html>
