--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
     <input type="text" id="searchInput" placeholder="Search for sweets...">
   </div>
 
+  <section class="order-form">
+  <h2>📦 Place Your Order</h2>
+  <form action="#" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <select name="sweet" required>
+      <option disabled selected>Select a sweet</option>
+      <option>Rasgulla</option>
+      <option>Ladoo</option>
+      <option>Gulab Jamun</option>
+      <option>Barfi</option>
+      <option>Kaju Katli</option>
+      <option>Jalebi</option>
+    </select>
+    <input type="number" name="quantity" placeholder="Quantity (e.g. 1 Kg)" required>
+    <input type="tel" name="contact" placeholder="Phone or WhatsApp number" required>
+    <textarea name="message" placeholder="Any special requests?"></textarea>
+    <button type="submit" disabled>Submit (Email not connected yet)</button>
+  </form>
+</section>
+
   <section class="dropdown-section">
     <select id="sweetDropdown">
       <option disabled selected>Choose a sweet</option>
