--- a/index.html
+++ b/index.html
@@ -12,22 +12,12 @@
     <p>Craving something sweet? We’ve got you covered!</p>
   </header>
 
+  <!-- 🔍 Search Bar Only -->
   <div class="search-bar">
     <input type="text" id="searchInput" placeholder="Search for sweets...">
   </div>
-  
-  <section class="dropdown-section">
-    <select id="sweetDropdown">
-      <option disabled selected>Choose a sweet</option>
-      <option>Rasgulla</option>
-      <option>Ladoo</option>
-      <option>Gulab Jamun</option>
-      <option>Barfi</option>
-      <option>Kaju Katli</option>
-      <option>Jalebi</option>
-    </select>
-  </section>
 
+  <!-- 🌟 Featured Sweet Section -->
   <section class="featured">
     <h2>🌟 Featured Sweet of the Day</h2>
     <div class="card">
@@ -35,41 +25,38 @@
       <p>Soft, spongy & soaked in syrup — everyone’s favorite!</p>
     </div>
   </section>
-   <section class="order-form">
-  <h2>📦 Place Your Order</h2>
-  <form action="#" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required>
-    <select name="sweet" required>
-      <option disabled selected>Select a sweet</option>
-      <option>Rasgulla</option>
-      <option>Ladoo</option>
-      <option>Gulab Jamun</option>
-      <option>Barfi</option>
-      <option>Kaju Katli</option>
-      <option>Jalebi</option>
-    </select>
-    <input type="number" name="quantity" placeholder="Quantity (e.g. 1 Kg)" required>
-    <input type="tel" name="contact" placeholder="Phone or WhatsApp number" required>
-    <textarea name="message" placeholder="Any special requests?"></textarea>
-    <button type="submit" disabled>Submit (Email not connected yet)</button>
-  </form>
-</section>
 
+  <!-- 🧾 Order Form -->
+  <section class="order-form">
+    <h2>📦 Place Your Order</h2>
+    <form action="#" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <select name="sweet" required>
+        <option disabled selected>Select a sweet</option>
+        <option>Rasgulla</option>
+        <option>Ladoo</option>
+        <option>Gulab Jamun</option>
+        <option>Barfi</option>
+        <option>Kaju Katli</option>
+        <option>Jalebi</option>
+      </select>
+      <input type="number" name="quantity" placeholder="Quantity (e.g. 1 Kg)" required>
+      <input type="tel" name="contact" placeholder="Phone or WhatsApp number" required>
+      <textarea name="message" placeholder="Any special requests?"></textarea>
+      <button type="submit" disabled>Submit (Email not connected yet)</button>
+    </form>
+  </section>
 
   <footer>
     <p>© 2025 Sweet Treats. All rights reserved.</p>
   </footer>
 
+  <!-- No dropdown logic needed anymore -->
   <script>
     const searchInput = document.getElementById('searchInput');
-    const dropdown = document.getElementById('sweetDropdown');
-
     searchInput.addEventListener('input', () => {
-      const filter = searchInput.value.toLowerCase();
-      for (let option of dropdown.options) {
-        const text = option.text.toLowerCase();
-        option.hidden = !text.includes(filter) && option.value !== "";
-      }
+      // Placeholder for future functionality (e.g., filter cards or list)
+      console.log("User searched:", searchInput.value);
     });
   </script>
 </body>
