--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
         message += `\nTotal: ₹${total}`;
         message += `\n\nMy details:\nName: \nPhone: \nAddress: `;
         
-        window.open(`https://wa.me/91YOURPHONENUMBER?text=${encodeURIComponent(message)}`);
+        window.open(`https://wa.me/919971705547?text=${encodeURIComponent(message)}`);
       } 
       else if (method === 'upi') {
         // Simulate UPI payment
